--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -177,7 +177,7 @@
     <string name="settings_general_dark_mode_entry_dark">Thème sombre</string>
     <string name="settings_advanced_export_logs_entry_copy_original">Copier dans le presse-papier</string>
     <string name="settings_advanced_export_logs_entry_copy_scrubbed">Copier dans le presse-papier (censuré)</string>
-    <string name="settings_advanced_record_logs_summary_enabled">Enregistrement (jusqu\'à 1 000 entrées) sur l\'appareil …</string>
+    <string name="settings_advanced_record_logs_summary_enabled">Enregistrement (jusqu\'à 1 000 entrées) sur l\'appareil…</string>
     <string name="settings_advanced_record_logs_summary_disabled">Activer l\'enregistrement de journaux de diagnostic pour faciliter le support technique</string>
     <string name="settings_advanced_export_logs_scrub_dialog_button_ok">OK</string>
     <string name="settings_advanced_export_logs_scrub_dialog_empty">Aucun nom de canal n\'a été censuré. Peut-être n\'avez-vous pas d\'abonnements \\?</string>
@@ -231,4 +231,5 @@
     <string name="detail_settings_notifications_open_channels_title">Configurer les paramètres de notifications</string>
     <string name="detail_item_cannot_open_apk">Les applications ne peuvent pas être installées pour des raisons de sécurité. Ouvrez ceci dans le navigateur à la place.</string>
     <string name="detail_settings_notifications_open_channels_summary">Ignore Ne pas dérange (NPD), sons, etc.</string>
+    <string name="category_default">Inconnu (%1$s)</string>
 </resources>
